# 2DSand

./: .gitignore  CMakeLists.txt  Main.cpp
depends/GLAD/src/: glad.c
depends/GLFW/examples/: offscreen.c  particles.c  sharing.c  simple.c
depends/GLFW/src/: cocoa_init.m  cocoa_joystick.h  cocoa_joystick.m  cocoa_monitor.m  cocoa_platform.h  cocoa_time.c  cocoa_window.m  context.c  egl_context.c  egl_context.h  glx_context.c  glx_context.h  init.c  input.c  internal.h  linux_joystick.c  linux_joystick.h  mappings.h  monitor.c  nsgl_context.h  nsgl_context.m  null_init.c  null_joystick.c  null_joystick.h  null_monitor.c  null_platform.h  null_window.c  osmesa_context.c  osmesa_context.h  posix_thread.c  posix_thread.h  posix_time.c  posix_time.h  vulkan.c  wgl_context.c  wgl_context.h  win32_init.c  win32_joystick.c  win32_joystick.h  win32_monitor.c  (+15 more)
depends/GLFW/tests/: clipboard.c  cursor.c  empty.c  events.c  gamma.c  glfwinfo.c  icon.c  (+13 more)
res/shaders/: displayFragmentShader.glsl  displayVertexShader.glsl
src/core/: RandomNumberGenerator.cpp  RandomNumberGenerator.h  ShaderProgram.cpp  ShaderProgram.h  TextureManager.cpp  TextureManager.h  gui.h
src/display/: DisplayManager.cpp  DisplayManager.h  DisplayRenderer.cpp  DisplayRenderer.h  DisplayShader.cpp  DisplayShader.h
src/elements/: Element.cpp  Element.h  ElementRegistry.cpp  ElementRegistry.h  ElementUpdater.cpp  ElementUpdater.h
src/utils/: GlobalVariables.h  Maths.h  Rectangle.cpp  Rectangle.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
src/world/: Chunk.cpp  Chunk.h  World.cpp  World.h
(+7 files in other folders)
